app/assets/stylesheets/mobile/_user.sass
// `Profile - avatar, bio, etc
//----------------------------------------------------------------------------------------------------

.top_section
  background: #dedddb

  .profile-hdr
    padding: 0 5%
    height: auto

    .avatar_huge
      display: block
      margin: 15px auto 0
      position: relative
      top: auto
      right: auto
      height: 64px
      width: 64px

    .profile-hdr-btn
      left: 15px
      top: 0

    .profile-hdr-name
      margin: 15px 0 15px
      font-size: 42px
      text-align: center

    .profile-hdr-info
      overflow: visible
      display: block
      margin-bottom: 10px

    .profile-hdr-info-user,
    .profile-hdr-info-location,
    .profile-hdr-info-link,
    .profile-hdr-info-about
      display: block
      width: auto
      padding: 0 20px 0 22px
      background-color: #fff
      +border-radius(4px)
      padding: 3px 15px 3px 30px
      background-position: 7px center
      margin: 0 0 2px

    .profile-hdr-info-about
      padding: 15px
      margin: 0 0 12px 0

    .profile-hdr-btn,
    .profile-hdr-friend,
    .profile-hdr-addfriend,
    .profile-hdr-accept,
    .profile-hdr-deny
      padding: 4px 10px 5px
      font-size: 14px
      position: relative
      top: auto
      left: auto
      right: auto

    .profile-hdr-friend
      color: #fff
      font-weight: bold
      border-radius: 4px
      padding-left: 30px
      background: image-url("icon-check-white.png") no-repeat 10px 8px #51652f
      position: absolute
      right: 20px
      top: 22px

    .profile-hdr-pending
      top: 20px
      right: 20px

    .profile-hdr-accept
      margin: 0 0 5px

    #toggle_comments
      position: relative
      top: auto
      right: auto

article.profile
  .mobile
    display: none


// !Tab navigation

.top_section

  .profile-tabs
    margin: 20px 0 3px

  .profile-tabs-activity,
  .profile-tabs-friends,
  .profile-tabs-notes,
  .profile-tabs-bookmarks,
  .profile-tabs-highlights,
  .profile-tabs-badges,
  .profile-tabs-settings
    display: block
    width: 15.5%
    padding-left: 0
    margin-left: 1%
    float: left
    background: #EEEDEB image-url("mobile/profile-tabs-sprite.png") no-repeat center center
    overflow: hidden
    text-indent: 100%
    white-space: nowrap

  .profile-tabs-activity
    margin-left: 0

  .profile-tabs-activity a,
  .profile-tabs-friends a,
  .profile-tabs-notes a,
  .profile-tabs-bookmarks a,
  .profile-tabs-badges a,
  .profile-tabs-highlights a,
  .profile-tabs-settings a
    height: 52px
    line-height: 41px
    display: block
    color: #444
    text-decoration: none
    font-weight: bold
    font-size: 13px

  .profile-tabs-activity
    background-position: center 12px
    width: 17.5%

  .profile-tabs-friends
    background-position: center -116px

  .profile-tabs-notes
    background-position: center -243px

  .profile-tabs-bookmarks
    background-position: center -371px

  .profile-tabs-highlights
    background-position: center -498px

  .profile-tabs-badges
    background-position: center -626px

  .profile-tabs
    .highlight
      background-color: #fff
      border-top: 3px solid #222

      a
        height: 49px
        line-height: 37px

  .profile-tabs-activity.highlight
    background-position: center 10px
    width: 17.5%

  .profile-tabs-friends.highlight
    background-position: center -118px
    width: 15.5%

  .profile-tabs-notes.highlight
    background-position: center -245px

  .profile-tabs-bookmarks.highlight
    background-position: center -373px

  .profile-tabs-highlights.highlight
    background-position: center -500px

  .profile-tabs-badges.highlight
    background-position: center -628px



// !Profile - stuff below the avatar, bio, etc
//----------------------------------------------------------------------------------------------------

#main article.profile
  background: none

  .pagination
    margin-bottom: 5px
    padding: 15px 0 0 20px


// !Friends tab

#main article.profile

  .profile-friends
    margin: 0
    padding: 15px 5% 20px

  .friends-count-have
    font: 200 31px "Helvetica Neue", Arial, sans-serif
    margin-bottom: 0

  .friends-count-help
    font-size: 12px
    background-position: 0 3px
    line-height: 1.3em
    padding: 3px 0 0 21px
    margin: 7px 0

  .friends-count-find,
  .friends-view-requests
    position: relative
    right: auto
    top: auto
    bottom: auto
    margin: 10px 0 0

  .friend-requests-info
    position: relative
    width: auto
    float: none
    margin: 0

  .friend-requests-info:nth-of-type(even)
    margin: 0

  .friend-requestor-avatar
    width: 70px
    height: 70px
    +border-radius(70px)
    +box-shadow(rgba(0, 0, 0, 0.15) 0 1px 1px)
    position: absolute
    left: 0
    top: 10px

  .friend-requestor-name
    margin: 0 0 -5px 85px
    padding: 20px 0 0

  .friend-requestor-wants
    display: block
    margin: 0 0 0 85px

    span
      color: #444
      font-weight: normal

  .friend-requestor-accept,
  .friend-requestor-deny
    top: auto

  .friend-requestor-accept
    right: 0
    top: 10px
    background: #00B400 image-url("friend-request-sprite.png") no-repeat center 3px

  .friend-requestor-deny
    top: 46px
    right: 0
    background: #D30000 image-url("friend-request-sprite.png") no-repeat center -129px

  .friend-directory
    margin: 30px 0 0
    overflow: hidden
    clear: both

  .friend-directory-title
    margin: 0

  .friend-details
    position: relative
    border-bottom: 1px dotted #e1e1e1
    width: auto
    float: none
    height: 90px
    margin: 0

  .friend-details:nth-of-type(even)
    margin: 0

  .friend-details-avatar
    width: 70px
    height: 70px
    +border-radius(70px)
    +box-shadow(rgba(0, 0, 0, 0.15) 0 1px 1px)
    position: absolute
    left: 0
    top: 10px

  .friend-details-name
    margin: 0 0 -5px 85px
    padding: 31px 0 0
    font-size: 16px
    line-height: 1.2em
    width: 60%

  .friend-details-delete
    position: absolute
    height: 36px
    width: 36px
    +border-radius(36px)
    overflow: hidden
    text-indent: 100%
    white-space: nowrap
    top: 27px
    right: 0
    background: image-url("friend-request-sprite.png") no-repeat center -128px #D30000

  .friend-details-add
    position: absolute
    height: 36px
    width: 36px
    +border-radius(36px)
    overflow: hidden
    text-indent: 100%
    white-space: nowrap
    top: 27px
    right: 0
    background: image-url("friend-request-sprite.png") no-repeat center 4px #00B400  

  .friends-none
    padding: 110px 0 0

// !Blank slate pages

#main

  .slate-activity,
  .slate-bookmarks,
  .slate-highlights,
  .slate-notes,
  .slate-badges,
  .slate-friends
    padding: 120px 40px 20px !important
    border-radius: 0
    margin: 0

    h2
      font-size: 2.5em
      margin: 0 0 20px 0
    p
      text-align: center
      padding: 0

  .slate-activity
    padding: 120px 40px 20px


// !Notifications
//----------------------------------------------------------------------------------------------------

.notifications
  padding: 0 20px

#main .profile .emphasis + label,
#main .profile input + label,
#main .profile select + label
  display: inline-block

